# scmpc

./: .gitignore  AUTHORS  DEPENDENCIES  Makefile.am  Makefile.in  NEWS  README  README.md  Rules.mk  TODO  autogen.sh  bootstrap.sh  configure  configure.ac  depends.sh  index.html  index.md  scmpc.1  scmpc.1.in  scmpc.conf.example  scmpc.conf.in  style.css
_layouts/: default.html
_posts/: 2006-02-28-0.1.0.md  2006-03-13-0.1.1.md  2006-03-24-0.2.0.txt  2006-05-29-0.2.1.md  2006-12-02-0.2.2.txt  2011-02-20-0.3.0.md  2011-05-13-0.3.1.md  2012-07-23-0.4.0.txt  2013-03-04-0.4.1.txt
examples/: Rules.mk
man/: Rules.mk  scmpc.man
media/: default.css  scmpc.js
src/: Rules.mk  audioscrobbler.c  audioscrobbler.h  config.h.in  exception.h  liberror.c  liberror.h  libmpd.c  libmpd.h  md5.c  misc.c  misc.h  mpd.c  mpd.h  preferences.c  preferences.h  queue.c  queue.h  scmpc.c  scmpc.h
